# haskell-opengl

./: HaskellOpenGL.cabal  cabal.sandbox.config  readme.md
src/assignments/: GearsAsgn1.hs  LorenzAsgn2.hs
src/examples/: BasicTriangle.hs  ColoredTriangle.hs  DrawingPoints.hs  HelloWorld.hs
src/objects/: Cube.hs
