name:              HaskellOpenGL
Build-Type:        Simple
cabal-version:     >= 1.2
version:           0.1
author:            Adam Cardenas
maintainer:        cevaris@gmail.com
category:          Graphics

extra-source-files:  readme.md

--data-dir:   src/resources/
--data-files: sudoku17.1000.txt
--            sudoku17.16000.txt
--            sudoku17.49151.txt


--library
--  build-depends:   base
--  hs-source-dirs:  src/objects
--  exposed-modules: Cube

--library
--  build-depends:   base
--  hs-source-dirs:  src/inputs
--  exposed-modules: Bindings

--library
--  build-depends:   base
--  hs-source-dirs:  src/render
--  exposed-modules: Display


executable HelloWorld
    hs-source-dirs:  src/examples
    main-is:         HelloWorld.hs
    build-depends:   base,
                     GLUT
executable DrawingPoints
    hs-source-dirs:  src/examples
    main-is:         DrawingPoints.hs
    build-depends:   base,
                     GLUT
executable BasicTriangle
    hs-source-dirs:  src/examples
    main-is:         BasicTriangle.hs
    build-depends:   base,
                     GLUT
executable ColoredTriangle
    hs-source-dirs:  src/examples
    main-is:         ColoredTriangle.hs
    build-depends:   base,
                     GLUT
executable GearsAsgn1
    hs-source-dirs:  src/assignments
    main-is:         GearsAsgn1.hs
    build-depends:   base,
                     GLUT
executable LorenzAsgn2
    hs-source-dirs:  src/assignments
    main-is:         LorenzAsgn2.hs
    build-depends:   base,
                     GLUT

executable BasicCube
    hs-source-dirs:  src/examples
                     src/inputs
                     src/render
                     src/objects
    main-is:         BasicCube.hs
    other-modules:   Bindings
                     Cube
                     Display
    build-depends:   base,
                     GLUT


--executable rpar
--    hs-source-dirs:  src
--    other-modules:   Haskell.Ch2.Example
--    main-is:         rpar.hs
--    build-depends:   base, 
--                     parallel, 
--                     time


--executable sudoku1
--    hs-source-dirs: src/sudoku/
--    main-is:        sudoku1.hs
--    other-modules:  Sudoku
--    build-depends:  base,
--                    parallel,
--                    array,
--                    time

--executable sudoku2
--    hs-source-dirs: src/sudoku/
--    main-is:        sudoku2.hs
--    other-modules:  Sudoku
--    build-depends:  base,
--                    deepseq,
--                    parallel,
--                    array,
--                    time     
--    ghc-options:    -O2
--                    -threaded
--                    -rtsopts
--                    -eventlog

--executable sudoku3
--    hs-source-dirs: src/sudoku/
--    main-is:        sudoku3.hs
--    other-modules:  Sudoku
--    build-depends:  base,
--                    deepseq,
--                    parallel,
--                    array,
--                    time     
--    ghc-options:    -O2
--                    -threaded
--                    -rtsopts
--                    -eventlog

--executable sudoku5
--    hs-source-dirs: src/sudoku/
--    main-is:        sudoku5.hs
--    other-modules:  Sudoku
--    build-depends:  base,
--                    deepseq,
--                    parallel,
--                    array,
--                    time     
--    ghc-options:    -O2
--                    -threaded
--                    -rtsopts
--                    -eventlog

--executable strategy
--    hs-source-dirs: src/
--    main-is:        strategy.hs
--    build-depends:  base,
--                    parallel,
--                    array,
--                    time     
--    ghc-options:    -O2
--                    -threaded
--                    -rtsopts
--                    -eventlog
--                    -XDataKinds
           
--executable ex2-1
--    hs-source-dirs: src/haskell/ch2
--    main-is:        ex2-1.hs
--    build-depends:  base

